Adding randomisation and checking duplicates; adapting class CandidatesForWord to have similar options than project BuildDataset